--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Compile Mod
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 jobs:
   create_release:
     name: Create GitHub Release
@@ -12,18 +12,18 @@ jobs:
       - name: Compile Mod
         shell: cmd
         # Arguments:
-          # onefile = Compile all the GSC inside of src\gsc into one GSC file (doesn't support folders)
-          # multifile = Compile files separately (supports folders)
-          # release.gsc/.zip = File Name to have under your GitHub Release.
-              # Note that if you change this, you should change the very last line in this file to match.
+        # onefile = Compile all the GSC inside of src\gsc into one GSC file (doesn't support folders)
+        # multifile = Compile files separately (supports folders)
+        # release.gsc/.zip = File Name to have under your GitHub Release.
+        # Note that if you change this, you should change the very last line in this file to match.
         # By Default, we compile everything on it's own and ZIP it. If you want to change this, simply replace "multifile release.zip" with "onefile release.gsc"
-        run: cd tools && call compile.bat multifile BO2-Remix.zip
+        run: cd tools && call compile.bat multifile BO2-Strat_Tester.zip
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
-          title: "BO2-Remix"
+          title: "BO2-Strat_Tester"
           files: |
-            tools/BO2-Remix.zip
+            tools/BO2-Strat_Tester.zip
